--- a/Assignment 2.ipynb
+++ b/Assignment 2.ipynb
@@ -14,11 +14,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-07-06T09:35:19.109424Z",
-     "start_time": "2018-07-06T09:35:19.104410Z"
+     "end_time": "2018-06-22T11:44:35.348775Z",
+     "start_time": "2018-06-22T11:44:35.340776Z"
     }
    },
    "outputs": [
@@ -28,7 +28,7 @@
        "105"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -41,11 +41,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-07-06T09:35:20.151042Z",
-     "start_time": "2018-07-06T09:35:20.146044Z"
+     "end_time": "2018-06-22T11:42:59.064756Z",
+     "start_time": "2018-06-22T11:42:59.056758Z"
     }
    },
    "outputs": [],
@@ -59,11 +59,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-07-06T09:35:20.599108Z",
-     "start_time": "2018-07-06T09:35:20.596110Z"
+     "end_time": "2018-06-22T11:43:52.003893Z",
+     "start_time": "2018-06-22T11:43:51.991912Z"
     }
    },
    "outputs": [
@@ -95,11 +95,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-07-06T09:35:22.326612Z",
-     "start_time": "2018-07-06T09:35:22.322631Z"
+     "end_time": "2018-06-22T11:50:32.484271Z",
+     "start_time": "2018-06-22T11:50:32.476273Z"
     }
    },
    "outputs": [],
@@ -114,11 +114,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-07-06T09:35:22.787779Z",
-     "start_time": "2018-07-06T09:35:22.781779Z"
+     "end_time": "2018-06-22T11:52:15.858560Z",
+     "start_time": "2018-06-22T11:52:15.850563Z"
     }
    },
    "outputs": [
@@ -163,11 +163,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-07-06T09:35:26.694959Z",
-     "start_time": "2018-07-06T09:35:26.688963Z"
+     "end_time": "2018-06-22T11:56:27.006655Z",
+     "start_time": "2018-06-22T11:56:26.998673Z"
     }
    },
    "outputs": [
@@ -177,7 +177,7 @@
        "['A', 'C', 'A', 'D', 'G', 'I', 'L', 'D']"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,11 +189,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-07-06T09:35:27.082930Z",
-     "start_time": "2018-07-06T09:35:27.076933Z"
+     "end_time": "2018-06-22T11:57:39.943577Z",
+     "start_time": "2018-06-22T11:57:39.931580Z"
     }
    },
    "outputs": [
@@ -203,7 +203,7 @@
        "['A', 'C', 'A', 'D', 'G', 'I', 'L', 'D']"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -222,11 +222,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-07-06T09:35:30.013647Z",
-     "start_time": "2018-07-06T09:35:30.008648Z"
+     "end_time": "2018-06-22T12:00:20.105071Z",
+     "start_time": "2018-06-22T12:00:20.093076Z"
     }
    },
    "outputs": [
@@ -236,7 +236,7 @@
        "['x', 'xx', 'xxx', 'xxxx', 'y', 'yy', 'yyy', 'yyyy', 'z', 'zz', 'zzz', 'zzzz']"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -256,11 +256,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-07-06T09:35:30.555650Z",
-     "start_time": "2018-07-06T09:35:30.550635Z"
+     "end_time": "2018-06-22T12:02:45.869416Z",
+     "start_time": "2018-06-22T12:02:45.857436Z"
     }
    },
    "outputs": [
@@ -270,7 +270,7 @@
        "['x', 'y', 'z', 'xx', 'yy', 'zz', 'xxx', 'yyy', 'zzz', 'xxxx', 'yyyy', 'zzzz']"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -290,11 +290,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-07-06T09:35:31.164987Z",
-     "start_time": "2018-07-06T09:35:31.157991Z"
+     "end_time": "2018-06-23T10:26:55.642402Z",
+     "start_time": "2018-06-23T10:26:55.634407Z"
     }
    },
    "outputs": [
@@ -304,7 +304,7 @@
        "[[2], [3], [4], [3], [4], [5], [4], [5], [6]]"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -324,11 +324,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-07-06T09:35:34.033390Z",
-     "start_time": "2018-07-06T09:35:34.026375Z"
+     "end_time": "2018-06-23T10:29:17.261807Z",
+     "start_time": "2018-06-23T10:29:17.253810Z"
     }
    },
    "outputs": [
@@ -338,7 +338,7 @@
        "[[2, 3, 4, 5], [3, 4, 5, 6], [4, 5, 6, 7], [5, 6, 7, 8]]"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -347,41 +347,6 @@
     "# [[2, 3, 4, 5], [3, 4, 5, 6], [4, 5, 6, 7], [5, 6, 7, 8]]\n",
     "a = list(range(2,6))\n",
     "[[i+j for i in a] for j in range(0,4)]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 54,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-07-06T09:35:34.985818Z",
-     "start_time": "2018-07-06T09:35:34.977820Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[(1, 1), (2, 1), (3, 1), (1, 2), (2, 2), (3, 2), (1, 3), (2, 3), (3, 3)]"
-      ]
-     },
-     "execution_count": 54,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# [(1, 1), (2, 1), (3, 1), (1, 2), (2, 2), (3, 2), (1, 3), (2, 3), (3, 3)]\n",
-    "input_list=[1,2,3]\n",
-    "result = [ (b,a) for a in input_list for b in input_list]\n",
-    "result"
    ]
   },
   {
@@ -404,11 +369,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-07-06T09:35:55.477031Z",
-     "start_time": "2018-07-06T09:35:39.004642Z"
+     "end_time": "2018-06-29T15:55:58.174349Z",
+     "start_time": "2018-06-29T15:55:54.275435Z"
     }
    },
    "outputs": [
@@ -416,10 +381,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter the value of side 1: 5\n",
-      "Enter the value of side 2: 6\n",
-      "Enter the value of side 3: 7\n",
-      "Area of the triangle 4.898979485566356\n"
+      "Enter the value of side 1: 12\n",
+      "Enter the value of side 2: 15\n",
+      "Enter the value of side 3: 17\n",
+      "Area of the triangle 18.708286933869708\n"
      ]
     }
    ],
@@ -457,30 +422,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 54,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-07-06T09:36:09.711439Z",
-     "start_time": "2018-07-06T09:36:09.704440Z"
+     "end_time": "2018-06-29T16:12:16.408299Z",
+     "start_time": "2018-06-29T16:12:16.396301Z"
     }
    },
    "outputs": [],
    "source": [
     "def filter_long_words(string,integer):\n",
     "    wordlist=[]\n",
-    "    for i in string.split():\n",
-    "        if len(i)>integer:\n",
-    "            wordlist.append(i)\n",
+    "    for i in range(len(string)):\n",
+    "        if len(string)>integer:\n",
+    "            wordlist.append(string[i])\n",
     "    return wordlist"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 55,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-07-06T09:36:10.169701Z",
-     "start_time": "2018-07-06T09:36:10.164705Z"
+     "end_time": "2018-06-29T16:12:16.612261Z",
+     "start_time": "2018-06-29T16:12:16.600248Z"
     },
     "scrolled": true
    },
@@ -488,10 +453,49 @@
     {
      "data": {
       "text/plain": [
-       "['kjasldj', 'JDLKDJ', 'LJFSJFSL']"
+       "['k',\n",
+       " 'j',\n",
+       " 'a',\n",
+       " 's',\n",
+       " 'l',\n",
+       " 'd',\n",
+       " 'j',\n",
+       " ' ',\n",
+       " 'J',\n",
+       " 'D',\n",
+       " 'L',\n",
+       " 'K',\n",
+       " 'D',\n",
+       " 'J',\n",
+       " ' ',\n",
+       " 'L',\n",
+       " 'J',\n",
+       " 'F',\n",
+       " 'S',\n",
+       " 'J',\n",
+       " 'F',\n",
+       " 'S',\n",
+       " 'L',\n",
+       " ' ',\n",
+       " 'O',\n",
+       " 'D',\n",
+       " 'J',\n",
+       " 'O',\n",
+       " ' ',\n",
+       " 'o',\n",
+       " 'j',\n",
+       " 's',\n",
+       " 'd',\n",
+       " 'f',\n",
+       " ' ',\n",
+       " 'j',\n",
+       " 'o',\n",
+       " 'd',\n",
+       " 'f',\n",
+       " 'j']"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -517,11 +521,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 56,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-07-06T09:36:13.007818Z",
-     "start_time": "2018-07-06T09:36:13.003820Z"
+     "end_time": "2018-06-29T16:15:42.122154Z",
+     "start_time": "2018-06-29T16:15:42.114156Z"
     }
    },
    "outputs": [],
@@ -533,11 +537,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 58,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-07-06T09:36:13.580643Z",
-     "start_time": "2018-07-06T09:36:13.575646Z"
+     "end_time": "2018-06-29T16:17:57.598064Z",
+     "start_time": "2018-06-29T16:17:57.590065Z"
     }
    },
    "outputs": [],
@@ -575,8 +579,8 @@
    "execution_count": 60,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-07-06T09:36:16.271707Z",
-     "start_time": "2018-07-06T09:36:16.265693Z"
+     "end_time": "2018-06-29T16:20:06.735780Z",
+     "start_time": "2018-06-29T16:20:06.727782Z"
     }
    },
    "outputs": [],
@@ -587,13 +591,6 @@
     "        return True\n",
     "    return False"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
